force-app/main/default/objects/Hotel_Reservation__c/Hotel_Reservation__c.object-meta.xml
<CustomObject>
    <label>Hotel Reservation</label>
    <pluralLabel>Hotel Reservations</pluralLabel>
    <nameField>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
        <displayFormat>RES-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks hotel reservations for travel customers. Used by the Travel Assist agent to check and modify reservations when flights are delayed.</description>
</CustomObject>