force-app/main/default/objects/Hotel_Reservation__c/fields/Cancellation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deadline__c</fullName>
    <label>Cancellation Deadline</label>
    <type>Date</type>
    <description>Last date the reservation can be cancelled without penalty. Used by the agent to advise the customer on their options during a flight delay.</description>
</CustomField>