force-app/main/default/objects/Hotel_Reservation__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <label>Check-In Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Scheduled check-in date. May differ from Original_Check_In_Date__c if modified due to a flight delay.</description>
</CustomField>