force-app/main/default/objects/Hotel_Reservation__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <label>Check-Out Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Scheduled check-out date.</description>
</CustomField>