force-app/main/default/objects/Hotel_Reservation__c/fields/Confirmation_Code__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Code__c</fullName>
    <label>Confirmation Code</label>
    <type>Text</type>
    <length>50</length>
    <description>Hotel's confirmation code for the reservation. Provided to the customer or used when contacting the hotel.</description>
    <unique>true</unique>
</CustomField>