force-app/main/default/objects/Hotel_Reservation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Hotel_Reservations</relationshipName>
    <relationshipLabel>Hotel Reservations</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer who owns this reservation.</description>
</CustomField>