force-app/main/default/objects/Hotel_Reservation__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>100</length>
    <description>Country where the hotel is located.</description>
</CustomField>