force-app/main/default/objects/Hotel_Reservation__c/fields/Expected_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Time__c</fullName>
    <label>Expected Arrival Time</label>
    <type>DateTime</type>
    <description>Updated expected arrival time at the hotel, recalculated after a flight delay is confirmed.</description>
</CustomField>