force-app/main/default/objects/Hotel_Reservation__c/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <label>Hotel Name</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Name of the hotel.</description>
</CustomField>