force-app/main/default/objects/Hotel_Reservation__c/fields/Hotel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Phone__c</fullName>
    <label>Hotel Phone</label>
    <type>Phone</type>
    <description>Direct phone number to the hotel front desk.</description>
</CustomField>