force-app/main/default/objects/Hotel_Reservation__c/fields/Is_Refundable__c.field-meta.xml
<CustomField>
    <fullName>Is_Refundable__c</fullName>
    <label>Is Refundable</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this reservation is eligible for a refund upon cancellation.</description>
</CustomField>