force-app/main/default/objects/Hotel_Reservation__c/fields/Late_Arrival_Flag__c.field-meta.xml
<CustomField>
    <fullName>Late_Arrival_Flag__c</fullName>
    <label>Late Arrival Notified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the hotel has been notified of a late arrival due to a flight delay. Set to true once the agent or customer contacts the hotel.</description>
</CustomField>