force-app/main/default/objects/Hotel_Reservation__c/fields/Linked_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Linked_Flight_Number__c</fullName>
    <label>Linked Flight Number</label>
    <type>Text</type>
    <length>10</length>
    <description>The flight number associated with this reservation's arrival. Used by the Travel Assist agent to cross-reference flight delays with hotel check-ins.</description>
</CustomField>