force-app/main/default/objects/Hotel_Reservation__c/fields/Modification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Modification_Reason__c</fullName>
    <label>Modification Reason</label>
    <type>TextArea</type>
    <description>Notes explaining why the reservation was modified. Populated by the Travel Assist agent when changes are made on behalf of the customer.</description>
</CustomField>