force-app/main/default/objects/Hotel_Reservation__c/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <label>Number of Guests</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Total number of guests included in the reservation.</description>
</CustomField>