force-app/main/default/objects/Hotel_Reservation__c/fields/Original_Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Check_In_Date__c</fullName>
    <label>Original Check-In Date</label>
    <type>Date</type>
    <description>The original check-in date before any modifications. Preserved to track changes made due to flight delays or other disruptions.</description>
</CustomField>